testargo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-frontend
  template:
    metadata:
      labels:
        app: simple-frontend
    spec:
      containers:
      - name: frontend-container
        image: anjoysutrisna/testargo:latest # This will be patched by Kustomize overlay
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
