testargo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-frontend-service
spec:
  selector:
    app: simple-frontend
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 80
