testargo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-frontend-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: test.sushi
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-frontend-service
            port:
              number: 8081
